<resources>
    <string name="app_name">OrdenesServiciosAndroid</string>
    <string name="title_activity_info_extra">infoExtra</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_extra_info">extraInfo</string>
    <string name="cambiar">Cambiar estatus:</string>
    <string name="errord">Parece que no llenaste todos los campos</string>
    <string name="fec">Fecha</string>
    <string name="esta">Estatus</string>
    <string name="desc1">DESCRIPCIÓN:</string>
    <string name="desc">Descripción:</string>
    <string name="nom">Nombre:</string>
    <string name="con">Contraseña:</string>
    <string name="search">Buscar…</string>


    <string name="ter">Terminado</string>
    <string name="esp">En Espera:</string>
    <string name="noaten">No atendido:</string>
    <string name="atendido">Atendido:</string>

    <string name="ac">Aceptar</string>
    <string name="buscar">Buscar</string>
    <string name="cor">Correo</string>
    <string name="nosol">No. Solicitud</string>
    <string name="hol">HOLA!</string>

    <string name="est">ESTATUS: </string>
    <string name="folio">FOLIO: </string>

    <string name="ini">Iniciar</string>
    <string name="iniciar">Iniciar sesión</string>

    <string name="ubi1">UBICACIÓN:</string>
    <string name="nueva">Nueva solicitud</string>

    <string name="seguir">Seguir solicitud</string>
    <string name="grd">Guardar</string>

    <string name="ingresa">Ingresa la información solicitada</string>

    <string name="are">Área:</string>
    <string name="ubi">Ubicación:</string>

    <string-array name="Estatus">
        <item>En Espera</item>
        <item>Atendido</item>
        <item>No Antendido</item>
        <item>Terminado</item>
    </string-array>

</resources>