<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/i_solicitaro"
    tools:context=".seguimientOrden">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgvolInicio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/i_vol2"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886">


        <TextView

            android:id="@+id/txt1"
            android:layout_width="344dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/ingresa"
            android:textColor="@color/griz"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:onClick="VentanaSeguimiento"
            android:id="@+id/editNS"
            android:layout_width="357dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:autofillHints="creditCardNumber"
            android:background="@drawable/card_border"
            android:drawableStart="@drawable/v_solicitud"
            android:drawablePadding="4dp"
            android:hint="@string/nosol"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText

            android:id="@+id/editNom"
            android:layout_width="357dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_border"
            android:drawableStart="@drawable/v_person"
            android:drawablePadding="4dp"
            android:hint="@string/nom"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnSearchO"
            android:onClick="VentanaSeguimiento"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/purple"
            android:background="@drawable/border"
            android:text="@string/buscar"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
