<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".registrarOrden">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:foregroundGravity="center"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgVolIni"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/i_vol2"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/hola"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ORDEN DE SERVICIO"
                android:textColor="@color/griz"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"
            android:drawablePadding="4dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v_area_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/are"
                android:textColor="@color/griz"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/griz"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v_solicitud" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/desc"
                    android:textColor="@color/griz"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:textColor="@color/griz"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"
            android:drawablePadding="4dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v_ubicacion_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ubi"
                android:textColor="@color/griz"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUbi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/griz"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"
            android:drawablePadding="4dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v_fecha_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/fec"
                android:textColor="@color/griz"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/griz"
                android:textSize="18sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"
            android:drawablePadding="4dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v_estatus_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/esta"
                android:textColor="@color/griz"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtEstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/griz"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:background="@drawable/card_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v_solicitud" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/cambiar"
                    android:textColor="@color/griz"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/spinners"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/btnInsert"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/lavender_border"
            android:backgroundTint="@color/purple"
            android:onClick="insertarDatos"
            android:text="@string/grd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="20dp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>